k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openedx
  labels:
    istio-injection: enabled
