k8s/nginx-reverse-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openedx-nginx
  namespace: openedx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openedx-nginx
  template:
    metadata:
      labels:
        app: openedx-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: openedx-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: openedx-nginx
  namespace: openedx
spec:
  selector:
    app: openedx-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
